# VoiceEditor

./: .gitignore  1. deploy_indextts2.ps1  2. process_video.ps1  3. text_to_voice.py  4. merge_out_segs.py  DEVELOPMENT.md  PROJECT_STATUS.md  README.md  TEST_COVERAGE.md  TROUBLESHOOTING.md  deploy_service.sh  install.sh  main.py  main_gui.py  pyproject.toml  remote_config.yaml  text_to_voice.py  text_to_voice_refactored.py  voiceeditor.service.template
.github/: copilot-instructions.md
.github/prompts/: modularizeAndModernizePythonProject.prompt.md  plan-voiceEditor.prompt.md
.github/workflows/: release.yml
checkpoints/: README.md
index-tts/: README.md  pyproject.toml  webui.py
index-tts/docs/: README_zh.md
index-tts/indextts/: infer_v2.py
index-tts/indextts/BigVGAN/: bigvgan.py  models.py
index-tts/indextts/gpt/: model.py  model_v2.py
index-tts/indextts/s2mel/modules/: commons.py
index-tts/indextts/s2mel/modules/bigvgan/: bigvgan.py
index-tts/indextts/s2mel/modules/hifigan/: generator.py
index-tts/indextts/s2mel/modules/openvoice/: models.py
scripts/: remote_debug.py  remote_sync.py
src/: __init__.py  audio_merger.py  config.py  resource_manager.py  setup_env.py  tts_generator.py  video_handler.py
src/tts/: __init__.py  audio_pipeline.py  model_manager.py  processor.py
tests/: conftest.py  test_audio_merger_comprehensive.py  test_audio_merger_extended.py  test_audio_merger_funcs.py  test_audio_pipeline.py  test_audio_pipeline_extended.py  test_config_integration.py  test_failure_recovery.py  test_main_gui.py  test_model_manager.py  test_model_manager_extended.py  test_path_handling.py  test_processor_extended.py  test_resource_manager.py  test_setup_env.py  test_srt_error_handling.py  test_srt_processor.py  test_tts_generator_extended.py  test_ui_state.py  test_ui_theme.py  test_video_engine_comprehensive.py  test_video_handler_extended.py
ui/: state.py  theme.py
