[project]
name = "voiceeditor"
version = "1.0.0"
description = "Unified Video Dubbing & Voice Synthesis Wrapper for IndexTTS2"
authors = [{ name = "YinLu" }]
requires-python = ">=3.11, <3.12"
dependencies = [
    "yt-dlp",
    "faster-whisper",
    "fastapi",
    "pysrt",
    "pydub",
    "librosa",
    "soundfile",
    "modelscope",
    "huggingface-hub",
    "torch",
    "torchaudio",
    "einops",
    "transformers",
    "accelerate",
    "sentencepiece",
    "numpy<2.0.0",
    "omegaconf",
    "munch",
    "safetensors",
    "tqdm",
    "cn2an",
    "pinyin",
    "jieba",
    "opencc-python-reimplemented",
    "indextts",
    "nicegui",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uv.sources]
# Path to the bundled index-tts submodule
indextts = { path = "index-tts" }
