[project]
name = "voiceeditor"
version = "1.0.0"
description = "Unified Video Dubbing & Voice Synthesis Wrapper for IndexTTS2"
authors = [{ name = "YinLu" }]
requires-python = ">=3.11, <3.12"
dependencies = [
    "yt-dlp",
    "faster-whisper",
    "fastapi",
    "pysrt",
    "pydub",
    "librosa",
    "soundfile",
    "modelscope",
    "huggingface-hub",
    "torch",
    "torchaudio",
    "einops",
    "transformers",
    "accelerate",
    "sentencepiece",
    "numpy<2.0.0",
    "omegaconf",
    "munch",
    "safetensors",
    "tqdm",
    "cn2an",
    "pinyin",
    "jieba",
    "opencc-python-reimplemented",
    "indextts",
    "nicegui",
    "psutil",
    "paramiko>=4.0.0",
    "pyyaml>=6.0.3",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "coverage>=7.13.5",
    "iniconfig>=2.3.0",
    "pluggy>=1.6.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    # General DeprecationWarnings from frozen imports and extension modules (often Swig-related)
    "ignore:builtin type .* has no __module__ attribute:DeprecationWarning",
    # Specific pydub/audioop warning for Python 3.11/3.13
    "ignore:'audioop' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
    # librosa and importlib-resources path vs files deprecation
    "ignore:path is deprecated. Use files.* instead:DeprecationWarning",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uv.sources]
# Path to the bundled index-tts submodule
indextts = { path = "index-tts" }
